exports[`<Checkbox /> renders matches previous snapshot 1`] = `
<div
  className="checkbox form-group ">
  <label>
    <input
      aria-disabled={false}
      checked={false}
      data-checked={false}
      id=""
      onBlur={[Function anonymous]}
      onChange={[Function anonymous]}
      onKeyPress={[Function anonymous]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="label-text ">
      
      <span
        className="label-text-normal">
        testLabel
      </span>
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 2`] = `
<div
  className="checkbox form-group ">
  <label>
    <input
      aria-disabled={false}
      checked={false}
      data-checked={false}
      id=""
      onBlur={[Function anonymous]}
      onChange={[Function anonymous]}
      onKeyPress={[Function anonymous]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="label-text ">
      
      <span
        className="label-text-normal">
        testLabel
      </span>
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 3`] = `
<div
  className="checkbox form-group ">
  <label>
    <input
      aria-disabled={false}
      checked={false}
      data-checked={false}
      id=""
      onBlur={[Function anonymous]}
      onChange={[Function anonymous]}
      onKeyPress={[Function anonymous]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="label-text ">
      
      <span
        className="label-text-normal">
        testLabel
      </span>
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 4`] = `
<div
  className="checkbox form-group ">
  <label>
    <input
      aria-disabled={false}
      checked={false}
      data-checked={false}
      id=""
      onBlur={[Function anonymous]}
      onChange={[Function anonymous]}
      onKeyPress={[Function anonymous]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="label-text ">
      
      <span
        className="label-text-normal">
        testLabel
      </span>
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 5`] = `
<div
  className="checkbox form-group disabled">
  <label>
    <input
      aria-disabled={true}
      checked={false}
      data-checked={false}
      id=""
      onBlur={[Function anonymous]}
      onChange={[Function anonymous]}
      onKeyPress={[Function anonymous]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="label-text ">
      
      <span
        className="label-text-normal">
        testLabel
      </span>
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 6`] = `
<div
  className="checkbox form-group ">
  <label>
    <input
      aria-disabled={false}
      checked={false}
      data-checked={false}
      id=""
      onBlur={[Function anonymous]}
      onChange={[Function anonymous]}
      onKeyPress={[Function anonymous]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="label-text ">
      
      <span
        className="label-text-normal">
        testLabel
      </span>
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 7`] = `
<div
  className="checkbox form-group ">
  <label>
    <input
      aria-disabled={false}
      checked={false}
      data-checked={false}
      id=""
      onBlur={[Function anonymous]}
      onChange={[Function anonymous]}
      onKeyPress={[Function anonymous]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="label-text ">
      
      <span
        className="label-text-normal">
        testLabel
      </span>
    </span>
  </label>
  <button
    className="tooltip"
    data-placement="top"
    data-toggle="tooltip"
    id="tooltip-"
    role="tooltip"
    title="dummy text"
    type="button">
    <i
      aria-hidden="true"
      className="icon-help" />
  </button>
</div>
`;
